# click_captcha_demo_srv

./: .envrc  .gitignore  env.sh  init.sh  package.json  pnpm-lock.yaml
api/: .envrc  env.sh  package.json  pnpm-lock.yaml  run.sh
api/src/: index.coffee
api/src/db/: hostId.coffee  mailId.coffee
api/src/post/: test.coffee
backup/data/pg/schema/i18n-dev/drop/: api.sql  i18n.sql  public.sql  usr.sql
backup/data/pg/schema/i18n-dev/table/: api.sql  i18n.sql  public.sql  usr.sql
docker/: README.md  docker-compose.yml  env.sh  up.sh
rust/i18n-rust-api/: Cargo.toml  dev.sh  env.sh
rust/i18n-rust-api/src/: kv.rs  main.rs
rust/i18n-rust-api/src/db/: captcha.rs  mod.rs  tran.rs
rust/i18n-rust-api/src/url/: auth.rs  captcha.rs  mod.rs  tran.rs
