[package]
name = "i18n-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
anypack = "0.1.19"
awp = "0.1.13"
axum = "0.6.20"
click_captcha = "0.1.8"
const-str = "0.5.6"
fred = "7.0.0"
intbin = "0.0.5"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = "0.11.22"
reqwest-middleware = "0.2.3"
reqwest-retry = "0.3.0"
retry-policies = "0.2.1"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = [
  "time",
  "rt-multi-thread",
  "macros",
  "rt"
] }
tracing = "0.1.39"
trt = "0.1.5"
url = "2.4.1"
vb = "0.0.7"
xkv = "0.1.17"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
